fixed require issue, can write to files

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "browserify-fs": "^1.0.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
